# KTSTOCK

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  walkthrough.md
.streamlit/: config.toml
docs/design/: system_architecture.md
docs/guides/: developer_guide.md  user_guide.md
docs/processes/: development_workflow.md
src/ai/models/: price_predictor.py
src/ai/providers/: gemini_provider.py
src/ai/services/: analysis_service.py
src/app/: i18n.py  main.py
src/app/components/: shared.py
src/app/locales/: en.json  vi.json
src/app/pages/: alerts.py  connector_test.py  crypto_analysis.py  dashboard.py  extras.py  log_viewer.py  portfolio.py  screener.py  settings.py  stock_analysis.py
src/auth/: auth_manager.py  rbac.py
src/charts/: plotly_engine.py
src/core/alerts/: engine.py
src/core/analysis/: fundamental.py  sentiment.py  technical.py
src/core/portfolio/: manager.py
src/core/screener/: filters.py
src/data/connectors/: __init__.py  base.py  crypto_connector.py  vnstock_chart_connector.py  vnstock_connector.py  vnstock_news_connector.py  vnstock_pipeline_connector.py  vnstock_pro_connector.py  vnstock_ta_connector.py
src/data/database/: connection.py  schema.sql
src/data/models/: crypto.py  portfolio.py  stock.py
src/data/repositories/: crypto_repo.py  stock_repo.py
src/services/: async_loader.py  cache_service.py  export_service.py  notification_service.py
src/utils/: config.py  constants.py  debug_logger.py  decorators.py  helpers.py  logger.py  validators.py
tests/unit/: test_analysis.py  test_connectors.py  test_debug_logger.py  test_services.py
vnstock-agent-guide-main/: context7.json
vnstock-agent-guide-main/.agents/skills/vnstock-migration-expert/: SKILL.md
vnstock-agent-guide-main/.agents/skills/vnstock-migration-expert/scripts/: migrate.py
