[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ktstock"
version = "1.0.0"
description = "KT Stock Analyzer - Professional Stock & Crypto Analysis Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "KT Stock Team"}
]

dependencies = [
    # === Core Framework ===
    "streamlit>=1.38.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # === Database ===
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",

    # === Data & API ===
    "vnstock>=3.1.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "python-binance>=1.0.19",
    "requests>=2.31.0",

    # === AI Providers ===
    "google-generativeai>=0.8.0",
    "openai>=1.40.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",

    # === Machine Learning ===
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "shap>=0.45.0",

    # === Deep Learning (optional) ===
    # "torch>=2.2.0",
    # "tensorflow>=2.16.0",

    # === NLP ===
    "transformers>=4.40.0",
    "underthesea>=6.8.0",

    # === Data Processing ===
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta-lib>=0.4.28; platform_system != 'Windows'",
    "pandas-ta>=0.3.14b1",

    # === Charts & Visualization ===
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "mplfinance>=0.12.10b0",
    "lightweight-charts>=2.0",
    "streamlit-echarts>=0.4.0",

    # === Notifications ===
    "python-telegram-bot>=21.0",

    # === Utilities ===
    "loguru>=0.7.2",
    "apscheduler>=3.10.4",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
